# ctrader

./: .env  .env.example  README.md  main.py  pepperstone_to_fxpro_mapping.json  pyproject.toml  signal_account_map.yml
src/app/: __init__.py  main.py
src/app/api/: dependencies.py  router.py
src/app/api/routes/: accounts.py  trades.py
src/app/core/: __init__.py  config.py  state.py
src/app/schemas/: accounts.py  trades.py
src/app/services/: account_service.py  ctrader_gateway.py  exceptions.py  signal_account_map.py  symbol_mapping.py  trade_history_service.py  trade_service.py
src/app/services/ctrader/: __init__.py  gateway.py  history.py  models.py  orders.py  symbols.py  transport.py
