[project]
name = "ctrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ctrader-open-api>=0.9.2,<0.9.3",
    "fastapi>=0.136.0",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.1.1",
    "service-identity>=24.2.0",
    "uvicorn>=0.44.0",
]
